Fix alignment in firefox and add screenshot

--- a/scss/styles/containers.scss
+++ b/scss/styles/containers.scss
@@ -7,7 +7,7 @@
 	margin: 20px;
 }
 .container-text {
-	padding: 10px 25px;
+	padding: 10px 10px;
 }
 
 .image-container {
@@ -36,16 +36,19 @@ img {
 }
 .ad-title {
 	font-weight: normal;
+	height: 50px;
 }
 .ad-sub-text {
 	color: $secondary;
+	height: 10px;
 }
 .ad-price {
 	font-weight: bold;
 	display: inline;
 	float: left;
 }
-.ad-space {
+
+.ad-size {
 	display: inline;
 	float: right;
 }
